# sources

AccountMgr/: account-t.tgz  expired.c  expired2.c  getpw  getpw.c  mssh.c  ssh.c
AccountMgr/Docs2006/: AccMgr(t).doc  Brochure ReCeT 1.doc  ReCeT.doc  Tips para quehaga el ReCet.txt  recet-comercial.ppt
AccountMgr/account-t/: classes.py  classes.py.bck  directivas.xml  init.py  menu.xml  perfiles.xml  profile.py  servers.xml  tasks.py  xml_task.py
AccountMgr/account-t/execs/: clean_account.eg3_bb2_qa  kjaskjsad.logs  kjdkjhdgd.logs  sfasg.logs
AccountMgr/nssh/: arg.c  arg.h  auth.c  auth.h  cgissh  cmd.c  cmd.h  common.h  compile  conf.c  conf.h  hssh.h  main.c  main.h  nssh  test_pass.txt
api_game/: Api_Game.dev  Api_Game.layout  MultiSearch.c  SearchDLL.html  SearchDLL.s  SearchFunction.html  SearchFunction.s  search_api.c
api_game/SearchDLL_archivos/: o_style.css
leech/: common.h  dll_method.c  dll_method.h  entry-2.s  lib-krnl.c  makefile  misc.c  misc.h  patch_iat.c  patch_iat.h  pe_method.c  pe_method.h  static_api.s  t_core.c  t_core.h  total.c
operac/: Manual Instalación-v2.doc  Manual de Uso -Operac.doc  Manual de Uso-v1.3.1.doc  Manual-de Uso-v1.3.2.doc  db_action-group.c  db_action.c  db_state.c  exec_bp.c  exec_mksysb.c  exec_savevg.c  operac-v1.4.tar  readline.c  srv_rstart.c
operac/operac/: .inioper.sh  .profile
operac/operac/etc/: db_auth  menu_back  menu_db  menu_impr  menu_logs  menu_moni  menu_svr  menuoper  operac.conf
operac/operac/lib/: mensajes
operac/operac/sbin/: db_action  db_state  exec_bp  exec_mksysb  exec_savevg  ingredat.sh  mensajes.sh  menu.sh  readline  srv_rstart
secure-transfer/conf/: x-sgw.conf
secure-transfer/etc/: siti.initd
sysdog109/: .strace.3272.swp  AUTHORS  ChangeLog  DISCLAIMER  INSTALL  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.cache  config.status  configure  configure.in  configure.scan  strace.3272  valgrind-full.txt.4723  valgrind-full.txt.4841  valgrind-full.txt.4895
sysdog109/autom4te-2.53.cache/: output.0  traces.0
sysdog109/autom4te-2.53.cache/CVS/: Entries  Repository
sysdog109/autom4te.cache/: output.0  traces.0
sysdog109/autom4te.cache/CVS/: Entries  Repository
sysdog109/etc/: Makefile  Makefile.am  Makefile.in  cip-sldog.conf  cip-sldog.conf.ori  db-sldog.conf.ori  sldog.sh  sldog.sh.ori
sysdog109/etc/CVS/: Entries  Repository  Root
sysdog109/include/: common.h  config.h  datalib.h  dbase.h  dogdef.h  errors.h  getpid.h  ipparse.h  mempool.h  net.h  typedb.h
sysdog109/include/CVS/: Entries  Repository
sysdog109/src/: Makefile  Makefile.am  Makefile.in  actions.c  afuncs.c  config.c  errors.c  getpid.c  ipparse.c  main.c  mempool.c  msgattr.c  msgget.c  msgparse.c  mssql.c  mysql.c  net.c  oracle.c  sldog  spools.c  trydb.c
sysdog109/src/.deps/: config.P  config.Po  errors.P  errors.Po  getpid.P  getpid.Po  ipparse.P  ipparse.Po  main.P  main.Po
sysdog109/src/.deps/CVS/: Entries  Repository
sysdog109/src/CVS/: Entries  Repository
test-xploit/stack/: remote-level0.c  stack_local.c  xp.py  xp2.c
triface/: exec_tri.c  exec_triface.c  js_sudo-mu.c  js_sudo.c  sv_chown.c  triface-v1.8.tar
triface/Manuales/: Flow.vsd  Infraestructura.vsd  Manual Triface - Draft.doc  Manual Triface - Draft.odt  Procedimiento de pasaje entre entornos SICOM_v2.doc  Solicitud de Pasaje a Producción Unix.doc  TRIFACE - Esquema de permisos y usuarios.xls  chart_manual.ods  datos.vsd  datos2.vsd  implementer.xls  pasajes sicom-2.doc  pasajes sicom.doc
triface/triface-v1.8/etc/: triface.com  triface.conf  triface.mail  triface.own
triface/triface-v1.8/lib/: js_sudo  triface.lib
win-scode/message_box/: mb2.s  mb3.s  messagebox.dev  messagebox.layout  messagebox.s  scode-mb.c
win-scode/write/: hola.s
